# config_saver

./: README.md  config_saver.yaml  main.py  pyproject.toml
.github/: copilot-instructions.md
config_saver/: __init__.py  cli.py  config.py  hooks.py  models.py  store.py  utils.py
config_saver/handlers/: __init__.py  base.py  env_vars.py  file.py  git_repos.py  personalization.py  registry.py  vscode.py
tests/: conftest.py  test_cli.py  test_config.py  test_hooks.py  test_models.py  test_store.py  test_utils.py
tests/handlers/: test_base.py  test_env_vars.py  test_file.py  test_git_repos.py  test_vscode.py
